# jcal-tracker

./: .gitignore  CMakeLists.txt  README.md  build_dependencies.bat  build_dependencies.sh  build_project.bat  build_project.sh  jcal-tracker.sln  premake5.lua  rebuild_project.sh  run_project.sh  vcpkg.json
JCalClient/: premake5.lua  user_data.json  user_data_backup.json
JCalClient/src/application/: main.cpp
JCalClient/user1/: user_data.json  user_data.json.orig
JCalCore/: premake5.lua
JCalCore/include/JCalCore/core/: app_core.h  keycodes.h  vector.h
JCalCore/src/core/: app_core.cpp  structs.h  time.h
JCalCore/src/gui/: imgui_handler.cpp  imgui_handler.h
JCalCore/src/json/: json_handler.cpp  json_handler.h
JCalCore/src/window/: window_handler.cpp  window_handler.h
jcal-client/: CMakeLists.txt
jcal-client/src/application/: main.cpp
jcal-core/: CMakeLists.txt
jcal-core/include/jcal-core/: adder.h
jcal-core/src/adder/: adder.cpp
jcal-core/src/utils/: utils.cpp  utils.h
jcal_client/: CMakeLists.txt  jcal_client.vcxproj  premake5.lua
jcal_client/src/application/: main.cpp
jcal_core/: CMakeLists.txt  jcal_core.vcxproj  jcal_core.vcxproj.filters  premake5.lua
jcal_core/include/jcal_core/: core.h  engine_core.h  input_handler.h  logger.h  window_handler.h
jcal_core/src/core/: app_timer.cpp  app_timer.h  engine_core.cpp  glfw_callback_context.cpp  glfw_callback_context.h
jcal_core/src/input/: input_handler.cpp  keycodes.cpp
jcal_core/src/logger/: logger.cpp
jcal_core/src/window/: window_handler.cpp
